--- a/src/components/searchbar.css
+++ b/src/components/searchbar.css
@@ -7,8 +7,8 @@
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   align-items: center;
   transition: all 0.3s ease;
-  width: 400px;       /* tamaño más visible */
-  margin: 0 auto;     /* centrado horizontal */
+  width: 400px;      
+  margin: 0 auto;     
 }
 
 .search-form:hover {
